generate cards number from data

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <h2>test integration - dev front</h2>
         <h1>Collection photo</h1>
     </header>
-    <main>
-
+    <main id="board">
     </main>
+    <script src="data.js"></script>
+    <script src="cards.js"></script>
 </body>
 </html>
