card position horizontaly and depth

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <h2>test integration - dev front</h2>
         <h1>Collection photo</h1>
     </header>
-    <main id="board">
+    <main >
+        <section id="board"></section>
     </main>
     <script src="data.js"></script>
     <script src="cards.js"></script>
